allow-cross-namespace.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-cross-namespace
  namespace: tank
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        namespaces: ["*"]
    to:
    - operation:
        ports: ["8080", "11001"]
